fix body overflow

--- a/css/common.css
+++ b/css/common.css
@@ -7,6 +7,7 @@ body,
     margin: 0;
     -webkit-user-select: none;
     user-select: none;
+    overflow: hidden;
 }
 .xr-canvas {
     position: absolute;
